# Sponsio

./: .dockerignore  .env.example  .gitignore  BRAND.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  OSS_PROMISE.md  QUICKSTART.md  README.ja.md  README.md  README.zh-CN.md  SECURITY.md  llms-full.txt  llms.txt  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  new_pattern.yml
.github/workflows/: ci.yml  publish.yml  scorecard.yml
actions/eval/: README.md  action.yml
assets/demos/: backup_delete_cli.tape  backup_delete_without.tape  backup_onboard.tape  cleanup_onboard.tape  coding_cleanup_cli.tape  coding_cleanup_without.tape  freeze_onboard.tape  freeze_violation_cli.tape  freeze_violation_without.tape  wire_onboard.tape  wire_transfer_cli.tape  wire_transfer_without.tape
data/: README.md
docs/: BENCHMARKS.md  architecture.md  cli.md  contracts.md  contributing.md  faq.md  formal-methods.md  index.md  integrations.md  observability.md  oss_scope.md  owasp-agentic-top-10.md  plugins.md  why.md
docs/concepts/: architecture.md  contracts.md  overview.md
docs/getting-started/: first-contract.md  install.md  onboard-prompt.md  quickstart.md
docs/guides/: contract-sources.md  observability.md  observe-vs-enforce.md  onboarding.md  reporting.md
docs/integrations/: index.md  openclaw.md
docs/reference/: benchmarks.md  cli.md  config-yaml.md  contract-lib.md  patterns.md  ts-sdk-parity.md
examples/demo/: README.md  demo_backup_delete.py  demo_coding_cleanup.py  demo_freeze_violation.py  demo_mcp_github_heist.py  demo_wire_transfer.py  fmt.py
examples/eval/: generate_corpus.py  sponsio.yaml
examples/integrations/: README.md
examples/scan/: README.md  scan_test_agent.py  sponsio.yaml
plugins/sponsio-claude-code/: QUICKSTART.md  README.md
plugins/sponsio-openclaw/: QUICKSTART.md  README.md  install_into_running_openclaw.sh  package-lock.json  package.json  tsconfig.json
scripts/: README.md  bench_verifier.py  build_llms_txt.py  check-ts-parity.sh  sync-ts-mirror.sh  sync_init_examples.py  sync_openclaw_artifact.py  validate_dfa_backend.py
sponsio/: __init__.py  _paths.py  agents.py  claude_agent.py  cli.py  config.py  constants.py  contract.py  core.py  crewai.py  doctor.py  eval_runner.py  google_adk.py  guard_stdin.py  init_wizard.py  langgraph.py  mcp.py  onboard.py  onboard_setup.py  openai.py  refresh.py  sponsiorc.py  vercel_ai.py
sponsio/demos/: __init__.py  replay.py
sponsio/discovery/: __init__.py  _types.py  loaders.py  starter_pack.py  trace_replay.py
sponsio/formulas/: __init__.py  _pred_key.py  dfa_evaluator.py  evaluator.py  fol.py  formula.py  nl_gen.py  parser.py  regex_check.py
sponsio/generation/: __init__.py  llm_extraction.py  nl_to_contract.py  structured_ir.py
sponsio/init_examples/: __init__.py
sponsio/integrations/: __init__.py  agents.py  base.py  claude_agent.py  claude_code_install.py  crewai.py  cursor.py  cursor_install.py  google_adk.py  hosts.py  langgraph.py  mcp.py  openai.py  openclaw_install.py  otel.py  vercel_ai.py
sponsio/models/: __init__.py  agent.py  contract.py  result.py  spans.py  system.py  thresholds.py  trace.py
sponsio/patterns/: __init__.py  library.py  sto.py  sto_catalog.py  sto_registry.py
sponsio/plugin/: __init__.py  mcp_introspect.py  registry.py  scan.py
sponsio/prompts/: __init__.py  onboard.md  refresh.md
sponsio/protocols/: __init__.py  sto.py
sponsio/render/: __init__.py  components.py  derive.py  explain.py  host_trace.py  monitor.py  replay.py  rich_report.py  session_view.py  tokens.py
sponsio/reporting/: __init__.py  aggregator.py  reader.py  renderer.py
sponsio/runtime/: __init__.py  evaluators.py  feedback.py  monitor.py  perf.py  (+5 more)
tests/: conftest.py  test_agents_integration.py  test_atom_types.py  test_base_autotag.py  test_claude_agent_integration.py  test_claude_code_secret_bypass.py  test_cli_demo.py  test_cli_scan_autovalidate.py  test_cli_scan_config.py  test_cli_scan_zero_tools.py  test_cli_skill_install.py  test_cli_validate.py  test_code_analysis.py  test_config.py  test_config_performance.py  test_config_sections.py  test_config_sto.py  test_contract_activate_at.py  test_core.py  test_crewai_integration.py  test_cross_namespace_trace.py  test_ctx_atom.py  test_cursor_hook_protocol.py  test_det_evaluator_isolation.py  test_dfa_evaluator.py  test_discovery_types.py  test_doctor.py  test_document_extractor.py  test_emit_context_loop.py  test_eval_action_contract.py  test_eval_baseline.py  test_eval_runner.py  test_evaluator.py  test_examples_eval_corpus.py  test_exporters.py  test_extractor_providers.py  test_finish_session.py  test_formulas.py  test_google_adk_integration.py  test_grounding.py  (+63 more)
ts/: README.md  package-lock.json  package.json  tsconfig.base.json
(+187 files in other folders)
